--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Html File</title>
     </head>
     <body>
-        This is a body of an HTML file.
+        This is a body of an HTML file. Making changes for the second time.
     </body>
 </html>
