Revert "Made changes for the Second time"
This reverts commit 5ba2b1cdd6a725ffa6a844c7de6c1a217748e7ab.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Html File</title>
     </head>
     <body>
-        This is a body of an HTML file. Making changes for the second time.
+        This is a body of an HTML file.
     </body>
 </html>
